// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-7"
>
  <div
    className="MuiGrid-root makeStyles-root-1 MuiGrid-container MuiGrid-item"
  >
    <div
      className="MuiGrid-root makeStyles-app-2 MuiGrid-container MuiGrid-item"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root makeStyles-icon-6"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
          />
        </svg>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <h6
          className="MuiTypography-root MuiTypography-subtitle1"
          mode="link"
        >
          Get the App
        </h6>
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-btngrp-5 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-btn-7"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Login
          </span>
        </button>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-btn-7"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            SignUp
          </span>
        </button>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <img
          alt="zomato-logo"
          className="makeStyles-logo-3"
          src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png"
        />
      </div>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-item MuiGrid-align-items-xs-baseline MuiGrid-justify-xs-center"
      >
        <div
          className="MuiGrid-root MuiGrid-item"
        >
          <h4
            className="MuiTypography-root MuiTypography-h4"
          >
            Discover the best food & drinks in
          </h4>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item"
        >
          <h4
            className="MuiTypography-root makeStyles-text-9 MuiTypography-h4"
          >
            Hyderabad
          </h4>
        </div>
      </div>
      <div
        className="MuiGrid-root makeStyles-search-4 MuiGrid-item"
      >
        <div
          className="MuiGrid-root makeStyles-root-10 MuiGrid-container MuiGrid-align-items-xs-center"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root makeStyles-icon-11"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
              />
            </svg>
          </div>
          <div
            className="MuiGrid-root makeStyles-input-12 MuiGrid-item"
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="inputField"
            >
              <div
                className="MuiInputBase-root MuiInput-root MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Hyderabad"
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root makeStyles-arrow-14 MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <div
              className="makeStyles-line-13"
            />
          </div>
          <div
            className="MuiGrid-root makeStyles-textField-15 MuiGrid-item MuiGrid-grid-sm-true"
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="inputField"
            >
              <div
                className="MuiInputBase-root MuiInput-root MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-marginDense MuiInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input MuiInputBase-inputMarginDense MuiInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Search for restaurant, cuisine or a dish"
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root makeStyles-searchIcon-16"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <div
      className="MuiGrid-root makeStyles-root-17 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-xs-space-evenly"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <a
          href="/hyderabad/delivery"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <img
                alt="Route Card"
                className="makeStyles-img-19"
                src="https://b.zmtcdn.com/webFrontend/64dffaa58ffa55a377cdf42b6a690e721585809275.png"
              />
            </div>
            <div
              className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6"
                data-testid="sample"
              >
                Order Food Online
              </h6>
            </div>
          </div>
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <a
          href="/hyderabad/dine-out"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <img
                alt="Route Card"
                className="makeStyles-img-19"
                src="https://b.zmtcdn.com/webFrontend/95f005332f5b9e71b9406828b63335331585809309.png"
              />
            </div>
            <div
              className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6"
                data-testid="sample"
              >
                Go out for a meal
              </h6>
            </div>
          </div>
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <a
          href="/hyderabad/night-life"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <img
                alt="Route Card"
                className="makeStyles-img-19"
                src="https://b.zmtcdn.com/webFrontend/8ff4212b71b948ed5b6d2ce0d2bc99981594031410.png"
              />
            </div>
            <div
              className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6"
                data-testid="sample"
              >
                Night Life & CLubs
              </h6>
            </div>
          </div>
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <div
          className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <img
              alt="Route Card"
              className="makeStyles-img-19"
              src="https://b.zmtcdn.com/webFrontend/b256d0dd8a29f9e0623ecaaea910534d1585809352.png"
            />
          </div>
          <div
            className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
          >
            <h6
              className="MuiTypography-root MuiTypography-h6"
              data-testid="sample"
            >
              Zomato Pro
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders component when logged in 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-7"
>
  <div
    className="MuiGrid-root makeStyles-root-1 MuiGrid-container MuiGrid-item"
  >
    <div
      className="MuiGrid-root makeStyles-app-2 MuiGrid-container MuiGrid-item"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root makeStyles-icon-6"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
          />
        </svg>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <h6
          className="MuiTypography-root MuiTypography-subtitle1"
          mode="link"
        >
          Get the App
        </h6>
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-btngrp-5 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end"
    >
      <div
        className="MuiGrid-root makeStyles-item-8 MuiGrid-item"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-btn-7"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            LogOut
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <img
          alt="zomato-logo"
          className="makeStyles-logo-3"
          src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png"
        />
      </div>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-item MuiGrid-align-items-xs-baseline MuiGrid-justify-xs-center"
      >
        <div
          className="MuiGrid-root MuiGrid-item"
        >
          <h4
            className="MuiTypography-root MuiTypography-h4"
          >
            Discover the best food & drinks in
          </h4>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item"
        >
          <h4
            className="MuiTypography-root makeStyles-text-9 MuiTypography-h4"
          >
            Hyderabad
          </h4>
        </div>
      </div>
      <div
        className="MuiGrid-root makeStyles-search-4 MuiGrid-item"
      >
        <div
          className="MuiGrid-root makeStyles-root-10 MuiGrid-container MuiGrid-align-items-xs-center"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root makeStyles-icon-11"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
              />
            </svg>
          </div>
          <div
            className="MuiGrid-root makeStyles-input-12 MuiGrid-item"
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="inputField"
            >
              <div
                className="MuiInputBase-root MuiInput-root MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Hyderabad"
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root makeStyles-arrow-14 MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <div
              className="makeStyles-line-13"
            />
          </div>
          <div
            className="MuiGrid-root makeStyles-textField-15 MuiGrid-item MuiGrid-grid-sm-true"
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="inputField"
            >
              <div
                className="MuiInputBase-root MuiInput-root MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-marginDense MuiInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input MuiInputBase-inputMarginDense MuiInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Search for restaurant, cuisine or a dish"
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root makeStyles-searchIcon-16"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <div
      className="MuiGrid-root makeStyles-root-17 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-xs-space-evenly"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <a
          href="/hyderabad/delivery"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <img
                alt="Route Card"
                className="makeStyles-img-19"
                src="https://b.zmtcdn.com/webFrontend/64dffaa58ffa55a377cdf42b6a690e721585809275.png"
              />
            </div>
            <div
              className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6"
                data-testid="sample"
              >
                Order Food Online
              </h6>
            </div>
          </div>
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <a
          href="/hyderabad/dine-out"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <img
                alt="Route Card"
                className="makeStyles-img-19"
                src="https://b.zmtcdn.com/webFrontend/95f005332f5b9e71b9406828b63335331585809309.png"
              />
            </div>
            <div
              className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6"
                data-testid="sample"
              >
                Go out for a meal
              </h6>
            </div>
          </div>
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <a
          href="/hyderabad/night-life"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <img
                alt="Route Card"
                className="makeStyles-img-19"
                src="https://b.zmtcdn.com/webFrontend/8ff4212b71b948ed5b6d2ce0d2bc99981594031410.png"
              />
            </div>
            <div
              className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6"
                data-testid="sample"
              >
                Night Life & CLubs
              </h6>
            </div>
          </div>
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <div
          className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <img
              alt="Route Card"
              className="makeStyles-img-19"
              src="https://b.zmtcdn.com/webFrontend/b256d0dd8a29f9e0623ecaaea910534d1585809352.png"
            />
          </div>
          <div
            className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
          >
            <h6
              className="MuiTypography-root MuiTypography-h6"
              data-testid="sample"
            >
              Zomato Pro
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders component when not logged in 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-7"
>
  <div
    className="makeStyles-popup-24"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-center"
    >
      <div
        className="MuiGrid-root makeStyles-root-21 MuiGrid-container MuiGrid-spacing-xs-5 MuiGrid-direction-xs-column"
      >
        <div
          className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-baseline"
        >
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-true"
          >
            <h4
              className="MuiTypography-root MuiTypography-h4"
            >
              Login
            </h4>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              onClick={[Function]}
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
          <form
            className="makeStyles-form-22"
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="email"
              onKeyUp={[Function]}
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  id="outlined-basic"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Email"
                  required={true}
                  type="text"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
                  style={
                    Object {
                      "paddingLeft": 8,
                    }
                  }
                >
                  <legend
                    className="PrivateNotchedOutline-legend-30"
                    style={
                      Object {
                        "width": 0.01,
                      }
                    }
                  >
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "&#8203;",
                        }
                      }
                    />
                  </legend>
                </fieldset>
              </div>
            </div>
            <br />
            <br />
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="password"
              onKeyUp={[Function]}
            >
              <div
                className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  disabled={false}
                  id="outlined-basic"
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Password"
                  required={true}
                  type="password"
                />
                <fieldset
                  aria-hidden={true}
                  className="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
                  style={
                    Object {
                      "paddingLeft": 8,
                    }
                  }
                >
                  <legend
                    className="PrivateNotchedOutline-legend-30"
                    style={
                      Object {
                        "width": 0.01,
                      }
                    }
                  >
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "&#8203;",
                        }
                      }
                    />
                  </legend>
                </fieldset>
              </div>
            </div>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-25 MuiButton-containedSecondary MuiButton-fullWidth"
              data-testid="button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="submit"
            >
              <span
                className="MuiButton-label"
              >
                 Log In
              </span>
            </button>
            <hr
              className="MuiDivider-root makeStyles-divide-26 MuiDivider-middle"
            />
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-25"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-google fa-w-16 makeStyles-icons-27"
                  data-icon="google"
                  data-prefix="fab"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 488 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                Continue with Google
              </span>
            </button>
            <hr
              className="MuiDivider-root makeStyles-divide-26 MuiDivider-middle"
            />
          </form>
          <div
            className="MuiGrid-root makeStyles-new-28 MuiGrid-item"
          >
            <h6
              className="MuiTypography-root MuiTypography-subtitle1"
            >
              New to zomato ?
            </h6>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <p
              className="MuiTypography-root MuiTypography-body1"
            >
              <span
                className="makeStyles-red-23"
              >
                 Sign Up
              </span>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root makeStyles-root-1 MuiGrid-container MuiGrid-item"
  >
    <div
      className="MuiGrid-root makeStyles-app-2 MuiGrid-container MuiGrid-item"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root makeStyles-icon-6"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
          />
        </svg>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <h6
          className="MuiTypography-root MuiTypography-subtitle1"
          mode="link"
        >
          Get the App
        </h6>
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-btngrp-5 MuiGrid-container MuiGrid-item MuiGrid-justify-xs-flex-end"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-btn-7"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Login
          </span>
        </button>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-btn-7"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            SignUp
          </span>
        </button>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 MuiGrid-item MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <img
          alt="zomato-logo"
          className="makeStyles-logo-3"
          src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png"
        />
      </div>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-item MuiGrid-align-items-xs-baseline MuiGrid-justify-xs-center"
      >
        <div
          className="MuiGrid-root MuiGrid-item"
        >
          <h4
            className="MuiTypography-root MuiTypography-h4"
          >
            Discover the best food & drinks in
          </h4>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item"
        >
          <h4
            className="MuiTypography-root makeStyles-text-9 MuiTypography-h4"
          >
            Hyderabad
          </h4>
        </div>
      </div>
      <div
        className="MuiGrid-root makeStyles-search-4 MuiGrid-item"
      >
        <div
          className="MuiGrid-root makeStyles-root-10 MuiGrid-container MuiGrid-align-items-xs-center"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root makeStyles-icon-11"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
              />
            </svg>
          </div>
          <div
            className="MuiGrid-root makeStyles-input-12 MuiGrid-item"
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="inputField"
            >
              <div
                className="MuiInputBase-root MuiInput-root MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Hyderabad"
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root makeStyles-arrow-14 MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <div
              className="makeStyles-line-13"
            />
          </div>
          <div
            className="MuiGrid-root makeStyles-textField-15 MuiGrid-item MuiGrid-grid-sm-true"
          >
            <div
              className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              data-testid="inputField"
            >
              <div
                className="MuiInputBase-root MuiInput-root MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-marginDense MuiInput-marginDense"
                onClick={[Function]}
              >
                <input
                  aria-invalid={false}
                  autoFocus={false}
                  className="MuiInputBase-input MuiInput-input MuiInputBase-inputMarginDense MuiInput-inputMarginDense"
                  disabled={false}
                  onAnimationStart={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  placeholder="Search for restaurant, cuisine or a dish"
                  required={false}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root makeStyles-searchIcon-16"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <div
      className="MuiGrid-root makeStyles-root-17 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-xs-space-evenly"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <a
          href="/hyderabad/delivery"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <img
                alt="Route Card"
                className="makeStyles-img-19"
                src="https://b.zmtcdn.com/webFrontend/64dffaa58ffa55a377cdf42b6a690e721585809275.png"
              />
            </div>
            <div
              className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6"
                data-testid="sample"
              >
                Order Food Online
              </h6>
            </div>
          </div>
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <a
          href="/hyderabad/dine-out"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <img
                alt="Route Card"
                className="makeStyles-img-19"
                src="https://b.zmtcdn.com/webFrontend/95f005332f5b9e71b9406828b63335331585809309.png"
              />
            </div>
            <div
              className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6"
                data-testid="sample"
              >
                Go out for a meal
              </h6>
            </div>
          </div>
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <a
          href="/hyderabad/night-life"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div
            className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
          >
            <div
              className="MuiGrid-root MuiGrid-item"
            >
              <img
                alt="Route Card"
                className="makeStyles-img-19"
                src="https://b.zmtcdn.com/webFrontend/8ff4212b71b948ed5b6d2ce0d2bc99981594031410.png"
              />
            </div>
            <div
              className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
            >
              <h6
                className="MuiTypography-root MuiTypography-h6"
                data-testid="sample"
              >
                Night Life & CLubs
              </h6>
            </div>
          </div>
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3"
      >
        <div
          className="MuiGrid-root makeStyles-root-18 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
        >
          <div
            className="MuiGrid-root MuiGrid-item"
          >
            <img
              alt="Route Card"
              className="makeStyles-img-19"
              src="https://b.zmtcdn.com/webFrontend/b256d0dd8a29f9e0623ecaaea910534d1585809352.png"
            />
          </div>
          <div
            className="MuiGrid-root makeStyles-text-20 MuiGrid-item"
          >
            <h6
              className="MuiTypography-root MuiTypography-h6"
              data-testid="sample"
            >
              Zomato Pro
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
